tests/src/frontend/syntax/invalid/invalid_object2.sk

fun test(): void {
  A { 42 }
}
